--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -1,5 +1,22 @@
 /* Reset and base styles  */
 
+body {
+  background: #000;
+  font-family: 'Poppins', sans-serif;
+}
+
+.container {
+  padding-right: 30px;
+  padding-left: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
+
+  @media (max-width: 580px) {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
+
 * {
   padding: 0px;
   margin: 0px;
