--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,3 +7,8 @@
 @import './components/hero';
 @import './components/whatwedo';
 @import './components/photo-section';
+@import './components/gear-cage';
+@import './components/leaf-section';
+@import './components/client';
+@import './components/star-section';
+@import './components/help';
