--- a/src/css/index.css
+++ b/src/css/index.css
@@ -597,4 +597,306 @@ legend {
   display: flex;
   justify-content: flex-end;
   gap: 16px;
+}
+
+.gear__wrapper {
+  display: flex;
+  height: 600px;
+}
+@media (max-width: 680px) {
+  .gear__wrapper {
+    flex-direction: column;
+    height: 900px;
+  }
+}
+
+.gear__section--desc {
+  width: 50%;
+  padding: 113px 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+@media (max-width: 680px) {
+  .gear__section--desc {
+    width: 100%;
+    height: 450px;
+    padding: 40px 20px;
+  }
+}
+
+.gear__section--pretitle {
+  color: #c0c0c0;
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.gear__section--title {
+  color: #fff;
+  margin-bottom: 20px;
+  font-size: 28px;
+  line-height: 32px;
+}
+
+.gear__section--text {
+  max-width: 518px;
+  color: #fff;
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 30px;
+}
+
+.gear-link {
+  display: inline-block;
+  width: 152px;
+  text-align: center;
+}
+
+.gear__photo--desc {
+  background-image: url("../images/photoaparat.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  width: 50%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+@media (max-width: 680px) {
+  .gear__photo--desc {
+    width: 100%;
+    height: 550px;
+  }
+}
+
+.gear__photo--list {
+  display: flex;
+  gap: 16px;
+  padding: 0 20px 30px 20px;
+}
+
+.leaf__section--wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  height: 600px;
+  background-image: url("../images/leaf.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (max-width: 590px) {
+  .leaf__section--wrap {
+    background-size: cover;
+    background-position: center center;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+  }
+}
+
+.leaf__text--wrap {
+  margin-bottom: 200px;
+  margin-right: 60px;
+  width: 300px;
+}
+@media (max-width: 590px) {
+  .leaf__text--wrap {
+    margin-right: 2px;
+    padding: 0 10px;
+    margin-top: 200px;
+    margin-bottom: 100px;
+  }
+}
+
+.leaf__section--title {
+  color: #c0c0c0;
+  margin-bottom: 5px;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.leaf__section--text {
+  color: #c0c0c0;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.leaf__section--desc {
+  padding: 0 20px 30px 20px;
+}
+
+.leaf__section--list {
+  display: flex;
+  justify-content: flex-end;
+  gap: 16px;
+}
+
+.clients__section {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.clients__title {
+  margin-top: 120px;
+  margin-bottom: 15px;
+  color: #c0c0c0;
+  font-size: 40px;
+  line-height: 42px;
+}
+@media (max-width: 520px) {
+  .clients__title {
+    font-size: 32px;
+    line-height: 32px;
+    margin-top: 60px;
+  }
+}
+
+.text {
+  color: #c0c0c0;
+  margin-bottom: 150px;
+  font-size: 24px;
+  line-height: 30px;
+}
+@media (max-width: 520px) {
+  .text {
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 55px;
+  }
+}
+
+.clients__desc--list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 109px;
+  margin-bottom: 100px;
+}
+@media (max-width: 990px) {
+  .clients__desc--list {
+    flex-wrap: wrap;
+    row-gap: 60px;
+    column-gap: 32px;
+    margin-bottom: 60px;
+  }
+}
+
+.clients__desc--item {
+  color: #fff;
+  width: 128px;
+}
+
+.star-section--wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  height: 780px;
+  background-image: url("../images/photo-section2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (max-width: 990px) {
+  .star-section--wrap {
+    height: 500px;
+  }
+}
+@media (max-width: 590px) {
+  .star-section--wrap {
+    background-size: cover;
+    background-position: center center;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+  }
+}
+
+.star__text--wrap {
+  margin-bottom: 200px;
+  margin-right: 60px;
+  width: 300px;
+}
+@media (max-width: 590px) {
+  .star__text--wrap {
+    margin-right: 2px;
+    padding: 0 10px;
+    margin-top: 200px;
+    margin-bottom: 100px;
+  }
+}
+
+.star__section--title {
+  color: #c0c0c0;
+  margin-bottom: 5px;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.star__section--text {
+  color: #c0c0c0;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.star__section--desc {
+  padding: 0 20px 30px 20px;
+}
+
+.star__section--list {
+  display: flex;
+  justify-content: flex-end;
+  gap: 16px;
+}
+
+.help__section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.help__section--title {
+  color: #fff;
+  font-size: 40px;
+  line-height: 42px;
+  margin-bottom: 15px;
+  margin-top: 113px;
+  max-width: 578px;
+  text-align: center;
+}
+@media (max-width: 640px) {
+  .help__section--title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+.help__section--text {
+  color: #c0c0c0;
+  font-size: 24px;
+  line-height: 30px;
+  margin-bottom: 15px;
+}
+@media (max-width: 640px) {
+  .help__section--text {
+    font-size: 20px;
+    line-height: 30px;
+    margin-top: 20px;
+  }
+}
+
+.link {
+  display: inline-block;
+  margin-bottom: 108px;
+  margin-top: 20px;
+}
+@media (max-width: 640px) {
+  .link {
+    margin-bottom: 90px;
+  }
 }/*# sourceMappingURL=index.css.map */
