--- a/src/partials/gear-cage.html
+++ b/src/partials/gear-cage.html
@@ -1,4 +1,4 @@
-<section class="gear-cage">
+<section class="gear-cage" id="gear-cage">
   <div class="gear__wrapper">
     <div class="gear__section--desc">
       <p class="gear__section--pretitle">The Gear cage</p>
