--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,10 +7,18 @@
   <div>
     <nav class="header__nav">
       <ul class="header__list">
-        <li class="header__item"><a href="#"></a>Business areas</li>
-        <li class="header__item"><a href="#"></a>Featured images</li>
-        <li class="header__item"><a href="#"></a>Gear cage</li>
-        <li class="header__item"><a href="#"></a>Contact</li>
+        <li class="header__item">
+          <a data-goto=".hero" href="#"></a>Business areas
+        </li>
+        <li class="header__item">
+          <a data-goto=".whatwedo__section" href="#"></a>Featured images
+        </li>
+        <li class="header__item">
+          <a data-goto=".gear-cage" href="#"></a>Gear cage
+        </li>
+        <li class="header__item">
+          <a data-goto=".footer" href="#"></a>Contact
+        </li>
         <li class="header__item--btn"><a href="#"></a>Get template</li>
       </ul>
       <a class="header__item--btn2" href="#">Get template</a>
