--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="gear-cage">
   <div class="hero__wrap">
     <div class="hero__text--wrap">
       <p class="hero__pretext">Photographer & Filmmaker</p>
