--- a/src/partials/whatwedo.html
+++ b/src/partials/whatwedo.html
@@ -1,4 +1,4 @@
-<section class="whatwedo__section">
+<section class="whatwedo__section" id="whatwedo__section">
   <div class="whatwedo__wrap container">
     <div class="whatwedo__title--wrap">
       <h2 class="whatwedo__title">What we do.</h2>
