--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,3 +12,4 @@
 @import './components/client';
 @import './components/star-section';
 @import './components/help';
+@import './components/footer';
