--- a/src/css/index.css
+++ b/src/css/index.css
@@ -182,7 +182,9 @@ legend {
 }
 @media (max-width: 445px) {
   .header__list {
-    column-gap: 14px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20px);
   }
 }
 
@@ -200,7 +202,7 @@ legend {
 }
 @media (max-width: 445px) {
   .header__item {
-    font-size: 10px;
+    font-size: 16px;
     line-height: 14px;
   }
 }
@@ -899,4 +901,195 @@ legend {
   .link {
     margin-bottom: 90px;
   }
+}
+
+.footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.footer__desc {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 840px) {
+  .footer__desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+.foter__flex--wrap {
+  display: flex;
+  gap: 40px;
+}
+@media (max-width: 840px) {
+  .foter__flex--wrap {
+    gap: 100px;
+  }
+}
+@media (max-width: 610px) {
+  .foter__flex--wrap {
+    gap: 50px;
+  }
+}
+@media (max-width: 480px) {
+  .foter__flex--wrap {
+    gap: 20px;
+  }
+}
+
+.footer__logo--text {
+  color: #c0c0c0;
+  font-size: 13px;
+  line-height: 20px;
+  margin-top: 20px;
+}
+@media (max-width: 840px) {
+  .footer__logo--text {
+    margin-bottom: 40px;
+  }
+}
+
+.footer__bisn--title {
+  color: #c0c0c0;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.footer__bisn--list {
+  margin-top: 10px;
+}
+
+.footer__bisn--item {
+  color: #fff;
+  font-size: 13px;
+  line-height: 20px;
+  margin-top: 10px;
+}
+
+.footer__pages--title {
+  color: #c0c0c0;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.footer__pages--list {
+  margin-top: 10px;
+  gap: 10px;
+}
+
+.footer__pages--item {
+  color: #fff;
+  font-size: 13px;
+  line-height: 20px;
+  margin-top: 10px;
+}
+
+.footer__input--wrap {
+  display: flex;
+  justify-content: space-between;
+  border-top: 2px solid #fff;
+  border-bottom: 2px solid #fff;
+}
+@media (max-width: 610px) {
+  .footer__input--wrap {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+.footer__wrap--text {
+  margin: 36px 0;
+}
+
+.footer__input--title {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 20px;
+}
+
+.footer__input--text {
+  color: #c0c0c0;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.footer__wrap--input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 610px) {
+  .footer__wrap--input {
+    margin-bottom: 40px;
+  }
+}
+
+.input {
+  background-color: #fff;
+  width: 458px;
+  height: 52px;
+  border-radius: 18px;
+  padding: 3px 50px 3px 10px;
+}
+@media (max-width: 840px) {
+  .input {
+    width: 300px;
+  }
+}
+@media (max-width: 480px) {
+  .input {
+    width: 280px;
+    height: 40px;
+  }
+}
+
+.footer__license--wrap {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 610px) {
+  .footer__license--wrap {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+}
+
+.footer__license--text {
+  color: #c0c0c0;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.footer__license--icons {
+  margin-bottom: 100px;
+}
+@media (max-width: 610px) {
+  .footer__license--icons {
+    margin-bottom: 60px;
+  }
+}
+
+.footer__license--list {
+  display: flex;
+  gap: 20px;
+}
+@media (max-width: 610px) {
+  .footer__license--list {
+    margin-top: 30px;
+  }
+}
+
+.footer__license--items {
+  color: #c0c0c0;
 }/*# sourceMappingURL=index.css.map */
