--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -36,10 +36,10 @@
   }
 
   @media (max-width: 445px) {
-    // display: grid;
-    // grid-template-columns: repeat(2, 1fr);
-    // grid-template-rows: repeat(2, 20px);
-    column-gap: 14px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20px);
+    // column-gap: 14px;
   }
 }
 .header__item {
@@ -54,7 +54,7 @@
   }
 
   @media (max-width: 445px) {
-    font-size: 10px;
+    font-size: 16px;
     line-height: 14px;
   }
 }
